<resources>
    <string name="app_name">Temperature Converter</string>

    <!--Unit labels-->
    <string name="label_kelvin" translatable="false">K</string>
    <string name="label_fahrenheit" translatable="false">°F</string>
    <string name="label_celsius" translatable="false">°C</string>
    <string name="label_rankine" translatable="false">°R</string>
    <string name="label_delisle" translatable="false">°D</string>
    <string name="label_newton" translatable="false">°N</string>
    <string name="label_reaumur" translatable="false">°Ré</string>
    <string name="label_romer" translatable="false">°Rø</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>

    <string name="settings_decimal_places_label">Number of Decimal Places</string>
    <string name="settings_decimal_places_key" translatable="false">decimal_places</string>
    <string name="settings_decimal_places_default" translatable="false">2</string>

    <!--Decimal place setting labels-->
    <string name="settings_one_decimal_label" translatable="false">1</string>
    <string name="settings_two_decimal_label" translatable="false">2</string>
    <string name="settings_three_decimal_label" translatable="false">3</string>
    <string name="settings_four_decimal_label" translatable="false">4</string>
    <string name="settings_five_decimal_label" translatable="false">5</string>

    <!--Decimal place setting values-->
    <string name="settings_one_decimal_value" translatable="false">1</string>
    <string name="settings_two_decimal_value" translatable="false">2</string>
    <string name="settings_three_decimal_value" translatable="false">3</string>
    <string name="settings_four_decimal_value" translatable="false">4</string>
    <string name="settings_five_decimal_value" translatable="false">5</string>

    <!--Error messages-->
    <string name="large_number_error_toast">Error: number is too large</string>
    <string name="negative_kelvin_error_toast">Error: cannot set temperature below absolute zero</string>
</resources>
